
2009-11-14 B Carvalho - committed version 1.5.2

 * code cleanup - removed unneeded C code

2009-11-15 R. Scharpf - committed version 1.5.3

 * numerous changes to the copy number estimation
 - ABset and CrlmmSetList classes are gone. Using SnpCallSetPlus and CrlmmSet
 - Added class SegmentSet that extends CrlmmSet directly.

2009-11-15 B Carvalho - committed version 1.5.4

 * removed references to old C code
 * added the missing files to the Collate field
 * fixed classes imported from oligoClasses in NAMESPACE
 * imported 'calls<-' from oligoClasses

2009-11-19 R. Scharpf - committed version 1.5.5

 * removed a few of the classes (CrlmmSet, CrlmmSetFF, SnpCallSetPlusFF,...)
 * added CNSet class
 * segmentData slot in CNSet class is an extension of RangedData (defined in IRanges package)

2009-11-19 R. Scharpf - committed version 1.5.6 

 * fixed bugs in initialization of SnpCallSetPlus

2009-11-19 R. Scharpf - committed version 1.5.7

 * fixed bugs in addFeatureAnnotation.SnpCallSetPlus

2009-12-01 M. Ritchie - committed version 1.5.8

 * bug fixed in stripNormalize() [X+16,Y+16 which avoids log(0) = -Inf values, 
      removed inadvertantly in version 1.3.7, put back]
 * removed header checking from readIdatFiles() (seems to fail often).  
      Instead check that the number of SNPs agrees (to within +/- 10K SNPs)

2009-12-04 B. Carvalho - committed version 1.5.11

 * moved IRanges and oligoClasses to Depends (DESCRIPTION)

2009-12-23 R. Scharpf - committed version 1.5.17

** updated first half of inst/scripts/copynumber.Rnw, as well as a few of the help files

2009-12-23 R. Scharpf - committed version 1.5.18

** removed generics for addFeatureAnnotation and GT<-

2009-12-24 M. Ritchie - committed version 1.5.19

 * Added 'humanomni1quadv1b" to chip types allowed in RGtoXY()


2010-01-20 R. Scharpf - committed version 1.5.21
 * Added CopyNumberVariants to DESCRIPTION

2010-01-20 R. Scharpf - committed version 1.5.22
 * restored inst/doc/crlmmDownstream.Rnw